# ListingLens-Local-RAG

./: .env.example  .gitignore  README.md  alembic.ini  blueprint.md  config.example.yaml  config.yaml  milestones.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 8a5a1993f0d5_initial_schema.py
docs/sample_outputs/: README.md
experiments/: htmlViewerTable.html
scripts/: extract_tables_to_file.py
src/rhp_analyzer/: __main__.py
src/rhp_analyzer/analytics/: __init__.py  cashflow_analyzer.py  citation_manager.py  float_calculator.py  governance_rules.py  models.py  normalizer.py  projection_engine.py  risk_quant.py  valuation_module.py  working_capital_analyzer.py
src/rhp_analyzer/cli/: main.py
src/rhp_analyzer/cli/commands/: __init__.py  analyze.py  config.py  validate.py
src/rhp_analyzer/config/: __init__.py  loader.py  schema.py
src/rhp_analyzer/ingestion/: __init__.py  contingent_liability_analyzer.py  debt_analyzer.py  entity_extractor.py  financial_parser.py  objects_tracker.py  ocr_processor.py  order_book_analyzer.py  pdf_processor.py  pipeline.py  pre_ipo_analyzer.py  promoter_extractor.py  section_mapper.py  stub_analyzer.py  table_extractor.py
src/rhp_analyzer/storage/: __init__.py  chunker.py  database.py  embeddings.py  file_manager.py  repositories.py  vector_store.py
src/rhp_analyzer/utils/: log_setup.py  progress.py
tests/integration/: test_camelot.py  test_ingestion_pipeline.py  test_storage_pipeline.py
tests/unit/: test_analytics.py  test_chunker.py  test_cli.py  test_config.py  test_config_loader.py  test_database.py  test_embeddings.py  test_entity_extractor.py  test_file_manager.py  test_logging.py  test_ocr_processor.py  test_pdf_processor.py  test_promoter_extractor.py  test_section_mapper.py  test_specialized_analyzers.py  test_specialized_extractors.py  test_table_extractor.py  test_vector_store.py
